--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -27,4 +27,5 @@ jobs:
     - name: Upload a Build Artifact
       uses: actions/upload-artifact@v3.1.2
       with:
-       name: "nspm"
+       path: "/" 
+       name: "nanopm"
