--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -4,11 +4,8 @@
 name: Go
 
 on:
-  push:
-    branches: [ "master" ]
-  pull_request:
-    branches: [ "master" ]
-
+  workflow_dispatch:
+  
 jobs:
 
   build:
@@ -20,12 +17,16 @@ jobs:
       uses: actions/setup-go@v3
       with:
         go-version: 1.19
+    - name: Get Dependancies
+      run: go get -v -t -d ./...
 
     - name: Build
-      run: go build -v ./...
-      
-    - name: Upload a Build Artifact
-      uses: actions/upload-artifact@v3.1.2
+      run: go build -v .
+
+    - name: Upload to Releases
+      uses: softprops/action-gh-release@v1
       with:
-       path: "./" 
-       name: "nanopm"
+        files: ./nanopm
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      
