--- a/.github/workflows/go-windows.yml
+++ b/.github/workflows/go-windows.yml
@@ -25,5 +25,5 @@ jobs:
 
     - uses: actions/upload-artifact@v3
       with:
-        name: nanopm.exe
-        path: nanopm
+        name: nspm.exe
+        path: nspm
