--- a/.github/workflows/go-windows.yml
+++ b/.github/workflows/go-windows.yml
@@ -1,29 +1,28 @@
-# This workflow will build a golang project
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-go
-
 name: Go - Windows
 
 on:
   workflow_dispatch:
   
 jobs:
-
   build:
     runs-on: windows-latest
     steps:
-    - uses: actions/checkout@v3
+      - name: Checkout code
+        uses: actions/checkout@v3
 
-    - name: Set up Go
-      uses: actions/setup-go@v3
-      with:
-        go-version: 1.19
-    - name: Get Dependencies
-      run: go get -v -t -d ./...
+      - name: Setup Go
+        uses: actions/setup-go@v3
+        with:
+          go-version: 1.19
 
-    - name: Build
-      run: go build -v .
+      - name: Get dependencies
+        run: go mod download
 
-    - uses: actions/upload-artifact@v3
-      with:
-        name: nspm.exe
-        path: nspm
+      - name: Build
+        run: go build -o nspm.exe
+
+      - name: Upload artifact
+        uses: actions/upload-artifact@v2
+        with:
+          name: nspm.exe
+          path: nspm.exe
