--- a/.github/workflows/go-linux.yml
+++ b/.github/workflows/go-linux.yml
@@ -7,22 +7,24 @@ on:
   workflow_dispatch:
   
 jobs:
-
   build:
     runs-on: ubuntu-latest
     steps:
+    - name: Checkout code
     - uses: actions/checkout@v3
 
-    - name: Set up Go
+    - name: Setup Go
       uses: actions/setup-go@v3
       with:
         go-version: 1.19
+
     - name: Get Dependancies
-      run: go get -v -t -d ./...
+      run: go mod download
 
     - name: Build
-      run: go build -v .
+      run: go build -o nspm
 
+    - name: Upload artifact
     - uses: actions/upload-artifact@v3
       with:
         name: nspm
