--- a/.github/workflows/go-linux.yml
+++ b/.github/workflows/go-linux.yml
@@ -1,7 +1,4 @@
-# This workflow will build a golang project
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-go
-
-name: Go-Linux
+name: Go
 
 on:
   workflow_dispatch:
@@ -11,20 +8,19 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: Checkout code
-    - uses: actions/checkout@v3
+      uses: actions/checkout@v3
 
     - name: Setup Go
       uses: actions/setup-go@v3
       with:
         go-version: 1.19
 
-    - name: Get Dependancies
+    - name: Get dependencies
       run: go mod download
 
     - name: Build
       run: go build -o nspm
 
-    - name: Upload artifact
     - uses: actions/upload-artifact@v3
       with:
         name: nspm
